package com.jovisco.tutorial.patterns.observer;

public interface Listener {

    void update(Event eventType);
}
